# MLOps-Forge

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml  release.yml
infrastructure/docker/: Dockerfile  Dockerfile.gpu  docker-compose.yml
infrastructure/grafana/provisioning/dashboards/: dashboards.yml  ml_monitoring_dashboard.json  model_monitoring.json
infrastructure/grafana/provisioning/datasources/: prometheus.yaml
infrastructure/kubernetes/: configmap.yaml  deployment.yaml  distributed-training.yaml  pvc.yaml  service.yaml
infrastructure/prometheus/: alert_rules.yml  prometheus.yml
infrastructure/terraform/: main.tf  variables.tf
src/: __init__.py
src/mlops_forge/data/: data_loader.py
src/mlops_production_system/monitoring/: __init__.py
